--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
 	{% if site.owner.flickr %}<a href="http://www.flickr.com/photos/{{ site.owner.flickr }}" title="{{ site.owner.name}} on Flickr" target="_blank"><i class="fa fa-flickr fa-2x"></i></a>{% endif %}
 	{% if site.owner.github %}<a href="http://github.com/{{ site.owner.github }}" title="{{ site.owner.name}} on Github" target="_blank"><i class="fa fa-github-square fa-2x"></i></a>{% endif %}
 	{% if site.owner.tumblr %}<a href="http://{{ site.owner.tumblr }}.tumblr.com" title="{{ site.owner.name}} on Tumblr" target="_blank"><i class="fa fa-tumblr-square fa-2x"></i></a>{% endif %}
-	{% if site.owner.mail %}<a href="mailto:{{ site.owner.mail }}" title="Send a mail to {{ site.owner.name}}" target="_blank"><i class="fa fa-envelope-square fa-2x"></i></a>{% endif %}
+	{% if site.owner.email %}<a href="mailto:{{ site.owner.email }}" title="Send a mail to {{ site.owner.name}}" target="_blank"><i class="fa fa-envelope-square fa-2x"></i></a>{% endif %}
   <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
 </div><!-- /.social-icons -->
