Trying to fix Google Analytics

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,3 +14,6 @@
 	{% if site.owner.email %}<a href="mailto:{{ site.owner.email }}" title="Send a mail to {{ site.owner.name}}" target="_blank"><i class="fa fa-envelope-square fa-2x"></i></a>{% endif %}
   <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a>
 </div><!-- /.social-icons -->
+<script type="text/javascript"
+  src="{{ site.url }}/assets/js/analytics.js">
+</script>
