--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,3 +51,7 @@
 <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{{ site.url }}/images/apple-touch-icon-114x114-precomposed.png">
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
+
+<script type="text/javascript"
+  src="{{ site.url }}/assets/js/analytics.js">
+</script>
