icons, links to threads, revert changes analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,3 +52,6 @@
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
 
+<script type="text/javascript"
+  src="{{ site.url }}/assets/js/analytics.js">
+</script>
