--- a/_sass/_elements.scss
+++ b/_sass/_elements.scss
@@ -457,13 +457,15 @@ table {
 
 // Things that I added
 // --------------------------------------------------
-.spoilerbutton {display:block;margin:5px 0;}
-4
-.spoiler {overflow:hidden;background: #f5f5f5;}
-5
+.spoilerbutton {
+  display:block;
+  margin:5px 0;
+}
+.spoiler {
+  overflow:hidden;
+  background: #f5f5f5;
+}
 .spoiler > div {-webkit-transition: all 0.2s ease;-moz-transition: margin 0.2s ease;-o-transition: all 0.2s ease;transition: margin 0.2s ease;}
-6
 .spoilerbutton[value="Show"] + .spoiler > div {margin-top:-100%;}
-7
 .spoilerbutton[value="Hide"] + .spoiler {padding:5px;}
 
