--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,12 @@
-{% if site.owner.google.ad-client and site.owner.google.ad-slot %}{% include ad-footer.html %}{% endif %}
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Footer ad -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4328789168608769"
+     data-ad-slot="2205648539"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 <span>Created by {{ site.owner.name }} (also known as {{ site.owner.nickname }}). Contact me or read my latest news on these websites:</span>
 <div class="social-icons">
