How to craft - Portal 2 Mod

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Responsive-ad-footer -->
+<!-- footer-ad-responsive -->
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-4328789168608769"
