Google webmaster verification

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,6 +18,8 @@
 <meta name="MobileOptimized" content="320">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="google-site-verification" content="Kf4WNcQ8vbpqczQdZHuGOcX8O4LH6EsO0-MruCK8oPw" />
+
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
 <!-- Webfonts -->
