Added comments in blog posts; removed ads in about; changed about me

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,13 +1,15 @@
-<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- footer-ad-responsive -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-4328789168608769"
-     data-ad-slot="6802141733"
-     data-ad-format="auto"></ins>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+{% if page.noads != true %}
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<!-- footer-ad-responsive -->
+	<ins class="adsbygoogle"
+		style="display:block"
+		data-ad-client="ca-pub-4328789168608769"
+		data-ad-slot="6802141733"
+		data-ad-format="auto"></ins>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({});
+	</script>
+{% endif %}
 
 <br>
 
