--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,7 +13,7 @@
 
 <br>
 
-<span>Created by {{ site.owner.name }} (also known as {{ site.owner.nickname }}). Follow me on these websites:</span>
+<span>&copy; {{ site.time | date: '%Y' }} {{ site.owner.name }} (also known as {{ site.owner.nickname }}). Follow me on these websites:</span>
 <div class="social-icons">
 	{% if site.owner.twitter %}<a href="http://twitter.com/{{ site.owner.twitter }}" title="{{ site.owner.name}} on Twitter" target="_blank"><i class="fa fa-twitter-square fa-2x"></i></a>{% endif %}
 	{% if site.owner.facebook %}<a href="http://facebook.com/{{ site.owner.facebook }}" title="{{ site.owner.name}} on Facebook" target="_blank"><i class="fa fa-facebook-square fa-2x"></i></a>{% endif %}
