Add Cookie consent

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -52,3 +52,6 @@
 <script type="text/javascript"
   src="{{ site.url }}/assets/js/analytics.js">
 </script>
+
+<!-- Cookie consent -->
+{% include cookieconsent.html %}
