--- a/_includes/ad-sidebar.html
+++ b/_includes/ad-sidebar.html
@@ -3,8 +3,8 @@
   <!-- 160x600 ad -->
   <ins class="adsbygoogle"
        style="display:inline-block;width:160px;height:600px"
-       data-ad-client="{{ site.owner.google.ad-client }}"
-       data-ad-slot="{{ site.owner.google.ad-slot }}"></ins>
+       data-ad-client="ca-pub-4328789168608769"
+       data-ad-slot="6289867736"></ins>
   <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
   </script>
