--- a/_includes/cookieconsent.html
+++ b/_includes/cookieconsent.html
@@ -3,5 +3,5 @@
     window.cookieconsent_options = {"message":"This website uses cookies to ensure you get the best experience on our website. By using it you agree to our use of cookies.","dismiss":"Got it!","learnMore":"More info","link":"{{ site.url }}/privacy","theme":"dark-bottom"};
 </script>
 
-<script type="text/javascript" src="//s3.amazonaws.com/cc.silktide.com/cookieconsent.latest.min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/1.0.9/cookieconsent.min.js"></script>
 <!-- End Cookie Consent plugin -->
