--- a/_includes/ad-content.html
+++ b/_includes/ad-content.html
@@ -7,7 +7,8 @@
 		<ins class="adsbygoogle"
 			 style="display:inline-block;width:336px;height:280px"
 			 data-ad-client="ca-pub-4328789168608769"
-			 data-ad-slot="1857238131"></ins>
+			 data-ad-slot="1857238131">
+		</ins>
 		<script>
 		(adsbygoogle = window.adsbygoogle || []).push({});
 		</script>
