--- a/_includes/ad-content-responsive.html
+++ b/_includes/ad-content-responsive.html
@@ -1,7 +1,7 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- content-ad-responsive -->
 <ins class="adsbygoogle"
-     style="display:block"
+     style="display:block; height: 280px;"
      data-ad-client="ca-pub-4328789168608769"
      data-ad-slot="5270666931"
      data-ad-format="auto">
