Changes in the ad

--- a/_includes/ad-content-responsive.html
+++ b/_includes/ad-content-responsive.html
@@ -1,10 +1,9 @@
 <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- content-ad-responsive -->
+<!-- content-ad-horizontal -->
 <ins class="adsbygoogle"
-     style="display:block;max-height:100px;"
+     style="display:inline-block;width:320px;height:100px"
      data-ad-client="ca-pub-4328789168608769"
-     data-ad-slot="5270666931"
-     data-ad-format="auto">
+     data-ad-slot="9002862536">
 </ins>
 <script>
 	(adsbygoogle = window.adsbygoogle || []).push({});
