Add Chrome tab color

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -49,6 +49,10 @@
 <!-- 144x144 (precomposed) for iPad 3rd and 4th generation -->
 <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.url }}/images/apple-touch-icon-144x144-precomposed.png">
 
+<!-- Theme -->
+<!-- Chrome, Firefox OS and Opera -->
+<meta name="theme-color" content="#000000">
+
 <script type="text/javascript"
   src="{{ site.url }}/assets/js/analytics.js">
 </script>
