Restore cookie consent

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,3 +59,5 @@
 <!-- Google Analytics -->
 <script type="text/javascript" src="{{ site.url }}/assets/js/analytics.js"></script>
 
+<!-- Cookie consent -->
+{% include cookieconsent.html %}
