--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -20,6 +20,10 @@
       </header>
       <div class="entry-content">
         {{ content }}
+        {% if (site.owner.disqus-shortname and page.comments) or site.comments %}
+          <div id="disqus_thread"></div><!-- /#disqus_thread -->
+          {% include disqus-comments.html %}
+        {% endif %}
       </div><!-- /.entry-content -->
     </div><!-- /.entry-wrapper -->
   </article>
