Add page level ads (use property "page-level-ads: true" to enable), not enabled in minecraft pages

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -66,3 +66,8 @@
 
 <!-- Cookie consent -->
 {% include cookieconsent.html %}
+
+<!-- Page-level ads by Google -->
+{% if page.page-level-ads == true %}
+{% include ad-page-level-ads.html %}
+{% endif %}
