Remove page-level-ads option and use instead no_page_level_ads option; Rename roads option to no_ads

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,6 +68,6 @@
 {% include cookieconsent.html %}
 
 <!-- Page-level ads by Google -->
-{% if page.page-level-ads == true %}
-{% include ad-page-level-ads.html %}
+{% if page.no_page_level_ads != true %}
+	{% include ad-page-level-ads.html %}
 {% endif %}
