Remove Cookie consent pop-up and add Cookie and Privacy Policy link in the footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,3 +21,4 @@
 	{% if site.owner.weibo %}<a href="https://www.weibo.com/u/{{ site.owner.weibo }}/" title="{{ site.owner.name}} on Weibo" target="_blank"><i class="fa fa-weibo fa-2x"></i></a>{% endif %}
   <!-- <a href="{{ site.url }}/feed.xml" title="Atom/RSS feed"><i class="fa fa-rss-square fa-2x"></i></a> -->
 </div><!-- /.social-icons -->
+<div style="text-align:center;"><small><ins><a href="{{ site.url }}/privacy">Cookie and Privacy Policy</a></ins></small></div>
